--- a/constants/projects.json
+++ b/constants/projects.json
@@ -4,12 +4,16 @@
         "role": "Scrum Master",
         "description": "Developed Linger a language learning web app with a REST architecture. Used Express.js for the backend API and Next.js for the frontend. The app features interactive quizzes, and lessons. Currently hosted and under testing and content management. Ensured robust data handling, responsive design, and scalability. Technologies: Express.js, Next.js, Postgresql. Methodology: SCRUM",
         "images": [
-            { "url": "" },
-            { "url": "" },
-            { "url": "" },
-            { "url": "" },
-            { "url": "" },
-            { "url": "" }
+            { "url": "https://www.dropbox.com/scl/fi/7wpde7nvah9qetdmn2ukq/shot10.png?rlkey=dusfoz726uqs37h21wzv5soen&st=avf9urhp&dl=0" },
+            { "url": "https://www.dropbox.com/scl/fi/n0sgfpb734np8v3gf8cgk/shot9.png?rlkey=qhboqzd5fhakcoycu1ukcswm1&st=ds5njnru&dl=0" },
+            { "url": "https://www.dropbox.com/scl/fi/6hhuypvijgs6s313nrmd0/shot8.png?rlkey=8a4bkmc76pb3vj2e5vb3f772w&st=ugnkcnnz&dl=0" },
+            { "url": "https://www.dropbox.com/scl/fi/hkyqgjzhxrw2eiii0dv1g/shot7.png?rlkey=lagecnzdhjebbg4hjfwb6pu5k&st=piw9cacb&dl=0" },
+            { "url": "https://www.dropbox.com/scl/fi/xknoyarcsijs7o9u4zsmx/shot6.png?rlkey=a0km9mfc9o0oiypopk7vq572y&st=vq4aycqp&dl=0" },
+            { "url": "https://www.dropbox.com/scl/fi/jqyy9zg0i3zzunneqwkmc/shot5.png?rlkey=7vxiivt50p9vtgm40ceusve5e&st=22r23pfc&dl=0" },
+            { "url": "https://www.dropbox.com/scl/fi/77fiwhvmfo63hlzhkzp71/shot4.png?rlkey=s4do2h1zv2aunx3wcgozudxy1&st=82ckap1h&dl=0" },
+            { "url": "https://www.dropbox.com/scl/fi/bggbuvn1zfn38nzje8q6t/shot2.png?rlkey=tnd5jzyhbnez0bkglasfbhico&st=jcfbbnhr&dl=0" },
+            { "url": "https://www.dropbox.com/scl/fi/ph88k14nvl6fx68u94oiu/shot1.png?rlkey=3wu6w5xv7c8stdfudt3ibpdvr&st=6dsu7meq&dl=0" },
+            { "url": "https://www.dropbox.com/scl/fi/iy0se11go5qczemzxydme/shot.png?rlkey=a8b2vg9u7armzjw56i7ev1etw&st=bshtk8rf&dl=0" }
         ],
         "completed": true
     },
@@ -18,12 +22,24 @@
         "role": "Scrum Master",
         "description": "Developed Sneaker Dealz, an e-commerce site for selling sneakers using Next.js for fast, SEO-optimized performance. Designed a user-friendly interface with Shadcn-UI and Figma. Fully hosted and soon accepting PayPal and credit card payments. Focused on scalability, performance, and seamless navigation. Technologies: Next.js, Shadcn-UI, Figma. Methodoly: SCRUM",
         "images": [
-            { "url": "" },
-            { "url": "" },
-            { "url": "" },
-            { "url": "" },
-            { "url": "" },
-            { "url": "" }
+            { "url": "https://www.dropbox.com/scl/fi/3pnsgh00bpz3tjnwpx4oi/shot1.png?rlkey=3nuvikduffpha4w23wqmc7rwm&st=k1jfj8n7&dl=0" },
+            { "url": "https://www.dropbox.com/scl/fi/ykntzmm36sv6t0o3nya5t/shot2.png?rlkey=ompaw34eip86gvyo70ttjvej3&st=7k64q7hi&dl=0" },
+            { "url": "https://www.dropbox.com/scl/fi/d6lbtssash2e1kyfw7rpk/shot3.png?rlkey=9bay77ofgd8g48uoxnbbl0pbe&st=o0qn8nhs&dl=0" },
+            { "url": "https://www.dropbox.com/scl/fi/gtuwhvis8mbpz7euticdg/shot4.png?rlkey=l0vk90otpm0g9xj8yv9qurhkz&st=mibv69g1&dl=0" },
+            { "url": "https://www.dropbox.com/scl/fi/fovd3nbojlvkbpvoidbaj/shot5.png?rlkey=28jwbkfziakyhn5xgyy3aznqq&st=u1njumzz&dl=0" },
+            { "url": "https://www.dropbox.com/scl/fi/fn11s6jqorusnzfsqrvpx/shot6.png?rlkey=pyrgh1n2q6onbd9pi2lez79fm&st=1yi8q4g9&dl=0" },
+            { "url": "https://www.dropbox.com/scl/fi/pb3qw119oqnyv17p8u5ia/shot7.png?rlkey=swj2wjbjup33ylq5gdc4vudmx&st=gi4htn1h&dl=0" },
+            { "url": "https://www.dropbox.com/scl/fi/565rym7yzzhr8tsl82633/shot8.png?rlkey=9k2w9n0yponayy6pmufyeplb3&st=jqp7xelb&dl=0" },
+            { "url": "https://www.dropbox.com/scl/fi/e12ngbc9qvbu946oqvxmp/shot9.png?rlkey=wj39s00817nvlp091cfahiynv&st=5e3yaqjt&dl=0" },
+            { "url": "https://www.dropbox.com/scl/fi/m61eu9tm582z3i13dz6s2/shot10.png?rlkey=678pvtyts27ny2wxgktuxys9p&st=rl3wcyhe&dl=0" },
+            { "url": "https://www.dropbox.com/scl/fi/c8qfs97y7g56xa3fvsj4r/shot11.png?rlkey=0bhh4xl0w508pk3d9hkinj8y4&st=zwn7ye8i&dl=0" },
+            { "url": "https://www.dropbox.com/scl/fi/8vtdoj2znkthjvtl8tt6t/shot12.png?rlkey=p32muk1j9gi2893yj6nb6whi7&st=n8mzeal9&dl=0" },
+            { "url": "https://www.dropbox.com/scl/fi/l250sxpuve0mydx0xbnrd/shot13.png?rlkey=wbv78l9cyrz9gkb4mnihtz1kt&st=vke7vrx3&dl=0" },
+            { "url": "https://www.dropbox.com/scl/fi/3jio9aldw34qf5oj6tioz/shot14.png?rlkey=h7n1plawccb9e4widhg4rqolk&st=azce146q&dl=0" },
+            { "url": "https://www.dropbox.com/scl/fi/984pd78vxjo78eydu9fo5/shot15.png?rlkey=gzql5vl08hxwtx1nyjedf4lzf&st=irecf631&dl=0" },
+            { "url": "https://www.dropbox.com/scl/fi/1s71lasxqtm0ww79gty1e/shot16.png?rlkey=e9lsnfg2ejkms60w33zdoevar&st=2rxjnyq7&dl=0" },
+            { "url": "https://www.dropbox.com/scl/fi/q10a7n2avmr90iigbcgzk/shot17.png?rlkey=m6jz7vn0t48a6t7bjxv8ohwtw&st=7eu21pz0&dl=0" },
+            { "url": "https://www.dropbox.com/scl/fi/y17jsrkmxkwbahi4p13of/shot18.png?rlkey=ds2uw4sz7vrwkxkuvornkvyab&st=btwxwa0j&dl=0" }
         ],
         "completed": true
     },
@@ -32,27 +48,28 @@
         "role": "Sole Entrepreneur",
         "description": "Developed Thommy's Store, an e-commerce site for tech products, using Django REST for the backend and ReactJS for the frontend. Created a robust, scalable platform supporting various product categories. Emphasized seamless user experience. Utilized AGILE methodology. Technologies: Django REST, ReactJS",
         "images": [
-            { "url": "" },
-            { "url": "" },
-            { "url": "" },
-            { "url": "" },
-            { "url": "" },
-            { "url": "" }
+            { "url": "https://www.dropbox.com/scl/fi/ngfeozirtif8w6tcsmupg/shot1.png?rlkey=1df7d5yb2gte1ato2o3zgvkeg&st=hy5nybdq&dl=0" },
+            { "url": "https://www.dropbox.com/scl/fi/6vsx3b1zjszhgj49p967t/shot2.png?rlkey=s1mezhm7i7u352c8msijcrxzq&st=vny4eqvu&dl=0" },
+            { "url": "https://www.dropbox.com/scl/fi/xfipe06bssbxgknuia5r2/shot3.png?rlkey=y3o2bi7v40mrbcrwtuuzbanu8&st=mombg822&dl=0" },
+            { "url": "https://www.dropbox.com/scl/fi/mbwsztrhuxqilqds06wra/shot4.png?rlkey=533pbp2zxa3jfvb3o13xzpm7q&st=qsn713mh&dl=0" },
+            { "url": "https://www.dropbox.com/scl/fi/wewunxs3zonjfgfxg18f8/shot5.png?rlkey=eu109aeni0ezovvzmlrre1gl0&st=vgnq29hn&dl=0" },
+            { "url": "https://www.dropbox.com/scl/fi/yx071ec0c8blrqa97kfea/shot6.png?rlkey=lrd9u8e0jk8fzru47vdfnn1ln&st=4yigtf82&dl=0" },
+            { "url": "https://www.dropbox.com/scl/fi/6f34o0om5i94frdc0de97/shot7.png?rlkey=9fo82hnd07aq7jtjevy4ix3rz&st=xavjccsv&dl=0" }
         ],
         "completed": false
     },
     {
-        "title": "Edify",
-        "role": "Scrum Master",
-        "description": "Developing Edify, a media entertainment platform focused on gospel content in audioand video formats. Designed to be fully cross-platform, utilizing Next.js for both the frontend and backend. Docker is used for optimized deployment across mobile, desktop, and web. The project aims to deliver a seamless and high-performance user experience. Technologies: Next.js, Tailwind.css Docker. Methodoly: SCRUM",
-        "images": null,
-        "completed": false
-    },
-    {
-        "title": "Yummy-Recipe",
+        "title": "Nester",
         "role": "Sole Entrepreneur",
-        "description": "A Recipe website meant to collect from a few APIs to help people get more skilled at cooking. Still in development, it is meant to use Next.js as full stack development framework. Technologies: Next.js, Framer.motion, Tailwind.css, Acernity-ui. Methodoly: SCRUM.",
-        "images": null,
+        "description": "Developing Nester, a property rental service focused on housing rentals. It is a full SaaS product still in development following an extended PERN stack with NextJS added for SEO optimization and SSR. Technologies: Next.js, Acernity-ui, React.js, Express.js, Postgrsql.  Methodoly: SCRUM",
+        "images": [
+            { "url": "https://www.dropbox.com/scl/fi/2h2orhqi3fgk8iz9hpghv/tag1.png?rlkey=a7krub3im9fosiewz1kduz569&st=gf2glyd6&dl=0" },
+            { "url": "https://www.dropbox.com/scl/fi/i7vxrcpoujd8h2x1aqas2/tag2.png?rlkey=r0q177qri5bunlatckitt6z56&st=k4kee0sm&dl=0" },
+            { "url": "https://www.dropbox.com/scl/fi/mxfboylbh2dguqoqhfiq6/tag3.png?rlkey=rw58uu5rhits10ffy58kxqsfv&st=id44dq8u&dl=0" },
+            { "url": "https://www.dropbox.com/scl/fi/ypxl6vwecm2egj990efgl/tag4.png?rlkey=1bdg9f57z01ejvmp251s0lcwd&st=9dabj3v8&dl=0" },
+            { "url": "https://www.dropbox.com/scl/fi/xh4wpsnjbbba77nqbmsvk/tag5.png?rlkey=rj6l12tx2by8vspjd1rux7sfi&st=3xznyepm&dl=0" },
+            { "url": "https://www.dropbox.com/scl/fi/5j2biubi02mpo48a1g4sa/tag6.png?rlkey=hhtbnv6p4ql9c8sczn7jt5wwc&st=wtolaj3r&dl=0" }
+        ],
         "completed": false
     }
     
